# diplomTMS

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
socnet/: celerybeat-schedule.dir  db.sqlite3  manage.py  runserver.py  temp
socnet/api/: serializers.py  urls.py  views.py
socnet/main/: admin.py  apps.py  consumers.py  filters.py  forms.py  middleware.py  models.py  routing.py  serializers.py  signals.py  tasks.py  temp  urls.py  views.py
socnet/main/migrations/: 0001_initial.py  0002_alter_profile_age.py  0002_alter_reaction_reaction_type.py  0003_delete_comment.py  0004_comment.py  0005_alter_friendship_profile_one_and_more.py  0006_friendshipstatus_delete_chat_alter_friendship_status.py  0007_chat.py  0008_alter_mediafile_file_type.py  0009_alter_profile_age_alter_profile_gender_and_more.py  0010_archivedmail_archivechat.py  0010_merge_20240829_1832.py  0011_merge_20240903_2034.py  0012_archivedmail_is_deleted_sender.py  0013_delete_chat.py  0014_chat.py  0015_notification_norest_activitylog_norest.py
socnet/main/templates/: registration.html
socnet/main/templates/main/: chat.html  create_group.html  create_news.html  edit_news.html  group_detail.html  group_list.html  index.html  layout.html  login.html  logout.html  mailbox.html  media_profile.html  news_detail.html  news_list.html  partial_comments.html  partials_friend_requests.html  password_change_done.html  password_change_form.html  profile.html  profile_list.html  profile_media_add.html  profile_update.html  registration.html  send_mail.html  update_group.html  user_mailbox.html
socnet/main/templatetags/: custom_filters.py
socnet/socnet/: asgi.py  celery.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
socnet/static/js/: popup.js
socnet/staticfiles/css/: main.54b50635.css
socnet/staticfiles/js/: main.23ca3d78.js  main.5529f3f0.js  main.5529f3f0.js.map  main.6e7decd2.js  main.6e7decd2.js.map  main.a87da44c.js  main.a87da44c.js.map  popup.js
